# silencelib

./: .gitignore  CMakeLists.txt  README.md
base/: noncopyable.h
silence/base/: CMakeLists.txt  current_thread.cpp  current_thread.h  noncopyable.h
silence/base/tests/: CMakeLists.txt  thread_test.cpp
